# 36.7_Chat

./: README.md
Chat_client/: CMakeLists.txt
Chat_client/Src/: loginform.cpp  loginform.h  loginform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  messageprivate.h  messagewidget.cpp  messagewidget.h  myCrypt.cpp  myCrypt.h  private_chat.cpp  private_chat.h  private_chat.ui  publick_chat.cpp  publick_chat.h  publick_chat.ui  registrform.cpp  registrform.h  registrform.ui  server.cpp  server.h  startscreen.cpp  startscreen.h  startscreen.ui
Chat_server/: CMakeLists.txt
Chat_server/Src/: connection_form.cpp  connection_form.h  connection_form.ui  database.cpp  database.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myCrypt.cpp  myCrypt.h  server.cpp  server.h
